# EasyTrain

./: .gitignore  main.py  pre_ds.py  qwentoken.py  test.py  train_model.py  train_tokenizer.py
dataset_origin/: download.txt
easytrain/: __init__.py  config.py  pyproject.toml  utils.py
easytrain/textprep/: __init__.py  data_processor.py  dataset_loader.py  tokenizer_loader.py  tokenizer_trainer.py
easytrain/train/: GptConfig.py  __init__.py  config.py  deepspeed3_config.json  train_Init.py  train_model.py
tokenizer/: tokenizer_config.json
tokenizer_Checkpoint/: interim_1160.json  interim_420.json
