[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easytrain"  # 包名，使用小写字母和连字符
version = "0.1.0"  # 初始版本号
description = "a easy train package for llm"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}

authors = [
  { name = "byron", email = "3447063@qq.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "transformers>=4.9.0",
  "datasets",
  "tokenizers",
  "tqdm",
  "deepspeed",
  "accelerate",
  "wandb"
]

[project.urls]
"Homepage" = "https://github.com/vs0533"
"Source" = "https://github.com/vs0533/EasyTrain"

[tool.setuptools.packages.find]
where = ["."]